--- a/content/post/il-2025-08.adoc
+++ b/content/post/il-2025-08.adoc
@@ -85,12 +85,16 @@ _Let's be honest, it's mostly just Apache Iceberg…_😅
 
 _Nothing to do with data, but stuff that I've found interesting or has made me smile._
 
+* Brad Stulberg's article https://freedium.cfd/https://bstulberg.medium.com/motivation-is-overrated-heres-what-works-instead-7c5744efd82f[Motivation is Overrated: Here's What Works Instead] is down to earth and well worth a read.
++
+> you cannot replace negative thinking with positive thinking. But you can replace negative thinking with positive action.
+
+* I'm not going to even pretend to understand the first thing in these organic simulation algorithms, but gosh https://bleuje.com/physarum-explanation/[don't they make pretty pictures]!
 * https://www.al3rez.com/todo-txt-journey[I Tried Every Todo App and Ended Up With a `.txt` File] — This one hit a bit close to home…
 +
 > I’d devour blog posts about getting things done or spot a cool app and think “this is it, this will finally organize me.” I’d burn hours building the perfect system, creating categories, tags, projects, labels. Setting it up felt like work.
 
-* I'm not going to even pretend to understand the first thing in these organic simulation algorithms, but gosh https://bleuje.com/physarum-explanation/[don't they make pretty pictures]!
-* https://blog.decryption.net.au/posts/macpaint.html[MacPaint Art From The Mid-80s Still Looks Great Today]
+* A healthy dose of nostalgia from https://blog.decryption.net.au/posts/macpaint.html[MacPaint Art From The Mid-80s Still Looks Great Today] (_although cards on the table, I was on the BBC Micro/Acorn Archimedes side of things_ 😅)
 * It may seem odd to compile a list of "Why I want to leave" the day that you start a new job, but https://blog.incrementalforgetting.tech/p/the-why-i-want-to-leave-list[this article makes a compelling case] for starting, and maintaining, such a list.
 
 
