--- a/content/post/il-2025-08.adoc
+++ b/content/post/il-2025-08.adoc
@@ -16,15 +16,14 @@ _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 TIP: You can find previous editions of _Interesting Links_ link:/categories/interesting-links/[here].
 
 == Data Engineering
-
-* Building your own data ingestion framework may be a siren song for many, but Cloudflare operate at the kind of scale where it's perhaps worth it. Read about https://blog.cloudflare.com/building-jetflow-a-framework-for-flexible-performant-data-pipelines-at-cloudflare/[Jetflow] here.
 * 🔥 Ben Rogojan (a.k.a. SeattleDataGuy) has a great list of https://seattledataguy.substack.com/p/5-things-in-data-engineering-that[5 Things in Data Engineering That Still Hold True After 10 Years] (_guess what: data modelling matters, if you start with crap data you'll end with crap data, and so on…_).
 * Veronika Durgin shares some https://freedium.cfd/https://medium.com/@durginv/self-recovering-data-pipelines-c1e4e6b7fbce[good tips for building resilient data pipelines].
-* Some good pointers for https://freedium.cfd/https://blog.dataengineerthings.org/data-platform-modernization-how-to-pick-your-stack-in-2025-part-1-da9045b0b4ed[why] you might want to modernise your data platform, and https://freedium.cfd/https://blog.dataengineerthings.org/data-platform-modernization-how-to-pick-your-stack-in-2025-part-2-023308ffc276[how to pick your stack if you do so].
+* Some good pointers for why you might want to https://freedium.cfd/https://blog.dataengineerthings.org/data-platform-modernization-how-to-pick-your-stack-in-2025-part-1-da9045b0b4ed[modernise your data platform], and https://freedium.cfd/https://blog.dataengineerthings.org/data-platform-modernization-how-to-pick-your-stack-in-2025-part-2-023308ffc276[how to pick your stack if you do so].
 * 🔥 Aleksandr Klein has a thoughtful post about https://freedium.cfd/https://medium.com/justeattakeaway-tech/the-mythic-journey-of-data-quality-maturity-df7b14524180[The Mythic Journey of Data Quality Maturity]
 * A useful post from Fiore Mario Vitale showing the use of OpenLineage to https://debezium.io/blog/2025/07/21/openlineage-debezium-flink/[troubleshoot data pipelines] in Debezium and Flink.
 
 == Data in Action
+* Building your own data ingestion framework may be a siren song for many, but Cloudflare operate at the kind of scale where it's perhaps worth it. Read about https://blog.cloudflare.com/building-jetflow-a-framework-for-flexible-performant-data-pipelines-at-cloudflare/[Jetflow] here.
 * Nubank have published a https://building.nubank.com/scaling-fraud-defense-how-nubank-evolved-its-risk-analysis-platform/[series] of https://building.nubank.com/mastering-streaming-data/[interesting] https://building.nubank.com/avalanche-stack-and-real-time-streaming-applications-at-nu/[blog posts] about their use of stream processing, including with Kafka and Flink. There's also a https://www.youtube.com/watch?v=awhhBlg1SqY[meetup recording] (in Spanish) that looks like it has lots more details.
 * Details from UK Bank Monzo on their Go-based https://monzo.com/blog/build-a-reactive-fraud-prevention-platform[fraud prevention platform].
 * 🔥 Excellent blog post from Anton Borisov at Fresha detailing why and how they https://freedium.cfd/https://medium.com/fresha-data-engineering/how-we-accidentally-became-one-of-uks-first-starrocks-production-pioneers-7db249f10010[adopted StarRocks] after finding that Snowflake "_wasn't cost-effective — or fast enough — for chatty, near-real-time product and operational analytics._".
