--- a/content/post/ai-mcp.adoc
+++ b/content/post/ai-mcp.adoc
@@ -183,3 +183,4 @@ This means that an LLM can then (with the appropriate permissions) access files 
 * https://modelcontextprotocol.io/[The MCP specification]
 * 🎥 https://www.youtube.com/watch?v=FLpS7OfD5-s[Model Context Protocol with Tim Berglund]
 * https://www.reddit.com/r/mcp/[r/mcp]: https://www.reddit.com/r/mcp/comments/1mj0fxs/i_spent_3_weeks_building_my_dream_mcp_setup_and/["I spent 3 weeks building my "dream MCP setup" and honestly, most of it was useless"]
+* https://www.confluent.io/blog/ai-agents-using-anthropic-mcp/[A good MCP explanation, plus examples using Confluent MCP server]
