--- a/content/post/ai-mcp.adoc
+++ b/content/post/ai-mcp.adoc
@@ -9,6 +9,7 @@ categories:
 - AI
 - MCP
 - Raycast
+- Stumbling into AI
 ---
 
 :source-highlighter: rouge
@@ -16,7 +17,7 @@ categories:
 :rouge-css: style
 :rouge-style: monokai
 
-_A short series of notes for myself as I learn more about the AI ecosystem as of September 2025._
+_A link:/categories/stumbling-into-ai[short series] of notes for myself as I learn more about the AI ecosystem as of September 2025._
 _The driver for all this is understanding more about Apache Flink's https://github.com/apache/flink-agents[*Flink Agents*] project, and Confluent's https://www.confluent.io/product/streaming-agents/[**Streaming Agents**]._
 
 The first thing I want to understand better is MCP.
