--- a/content/post/ai-models.adoc
+++ b/content/post/ai-models.adoc
@@ -20,11 +20,11 @@ _A link:/categories/stumbling-into-ai[short series] of notes for myself as I lea
 _The driver for all this is understanding more about Apache Flink's https://github.com/apache/flink-agents[*Flink Agents*] project, and Confluent's https://www.confluent.io/product/streaming-agents/[**Streaming Agents**]._
 
 Having link:/2025/09/04/stumbling-into-ai-part-1mcp/[poked around MCP] and got a broad idea of what it is, I want to next look at Models.
-What used to be as simple as "I used AI" actually boils down into several discrete areas, particularly when one starts looking at using LLMs beyond writing link:/images/2025/09/13d0418e1ddd2f60eef260aa512cb2a27aed080a4702fd7f01e73ef7b8ba5c2b.png[a rap about Apache Kafka in the style of Monty Python] and using it to build agents (like the Flink Agents that prompted this exploration in the first place).
+What used to be as simple as "I used AI" actually boils down into several discrete areas, particularly when one starts looking at using LLMs beyond writing link:/images/2025/09/13d0418e1ddd2f60eef260aa512cb2a27aed080a4702fd7f01e73ef7b8ba5c2b.webp[a rap about Apache Kafka in the style of Monty Python] and using it to build agents (like the Flink Agents that prompted this exploration in the first place).
 
 <!--more-->
 
-image:/images/2025/09/models.excalidraw.png[]
+image:/images/2025/09/models.excalidraw.webp[]
 
 == Models (Large Language ones, to be precise)
 
@@ -34,7 +34,7 @@ What used to be a "_OMFG have you seen this_" moment is now somewhat passé.
 Of _course_ I can ask my computer to write my homework assignment for me.
 Of _course_ I can use my phone to explain the nuances of the leg-before-wicket rule in Cricket.
 
-image:/images/2025/09/models1.excalidraw.png[]
+image:/images/2025/09/models1.excalidraw.webp[]
 
 Without a model, the whole AI sandcastle collapses.
 There are https://en.wikipedia.org/wiki/List_of_large_language_models[many dozens of LLMs].
@@ -126,7 +126,7 @@ Different LLMs may use different tokenisation too.
 You can use the https://github.com/simonw/ttok[ttok] tool (shown above) to explore tokenisation in more detail.
 Some tools, such as Goose, will also show you how many tokens are used:
 
-image:/images/2025/09/441a2e716c8ec369ff81988cb0c369a67ffdfd10d292d87bd42d0c3bc65a770a.png[,width=600px]
+image:/images/2025/09/441a2e716c8ec369ff81988cb0c369a67ffdfd10d292d87bd42d0c3bc65a770a.webp[,width=600px]
 
 You'll notice that as well as the token count, there's a dollar amount next to it.
 Since I'm running the model locally (using https://ollama.com/[Ollama]) there's no direct cost for the invocation of it.
@@ -135,7 +135,7 @@ These are https://platform.openai.com/docs/pricing?latest-pricing=standard#text-
 
 Nine tokens might seem like a drop in the ocean of a million, but look at this:
 
-image:/images/2025/09/c4ad35ade6245a62812b3aa3026cd7e2765c76d781b2d08339bbbfa0923e8596.png[]
+image:/images/2025/09/c4ad35ade6245a62812b3aa3026cd7e2765c76d781b2d08339bbbfa0923e8596.webp[]
 
 The same input prompt (`supercalifragilisticexpialidocious`) but somehow I just used nearly 10k tokens!
 If you read my link:/2025/09/04/stumbling-into-ai-part-1mcp/[blog post about MCP] you'll know that LLMs can make use of MCP servers (often generically referred to as "tools" or "extensions").
@@ -144,7 +144,7 @@ So when I gave the agent the prompt `supercalifragilisticexpialidocious`, what i
 
 So if I disable the tools/MCP servers, the token count should be back to just that of the input expression?
 
-image:/images/2025/09/1cb6fa8178df3c00a5e73f57459124f2afee02714fc43659881fd2baf3dde655.png[]
+image:/images/2025/09/1cb6fa8178df3c00a5e73f57459124f2afee02714fc43659881fd2baf3dde655.webp[]
 
 Not so.
 And that's because most of the time you use an LLM you're doing so with a particular purpose or framing, and so a _system prompt_ will help focus it on what you want it to do.
@@ -180,7 +180,16 @@ You might think a million tokens sounds a lot, but this can easily get burnt thr
 
 When you interact with an LLM, it can 'remember' what you've told it—and what it's told you—before.
 This is called the context window, and is measured in tokens.
-It's not always exposed by the AI tool.
+
+Generally, the smaller the context window the faster a model will return, compared to a larger window.
+Once the window is full you'll see the model start to "forget" things, or just refuse to run.
+
+Some AI tools will expose the current context window size, like Goose:
+
+image:/2025/09/e40e0845d3e3e37bd2448014a136da8709c6ea48287465e4d65f24cb45d98b08.webp[]
+
+You can also sometimes 'compact' the context window, which will in effect summarise everything "discussed" so far with the LLM and start a new conversation.
+Since the summary will be shorter than the dialogue from which it was created, the context window will be smaller.
 
 === Weights & Parameters
 
@@ -204,7 +213,7 @@ Some keep absolutely everything to themselves, giving the end user simply an API
 Other will perhaps share the pre-trained model (but not the source data or code that went into training it), giving people the opportunity to then train it further with their own fine-tuning.
 This is the "Open Weight" approach.
 
-You can read more about https://ai.meta.com/blog/llama-4-multimodal-intelligence/[Llama 4] and https://ai.meta.com/research/publications/the-llama-3-herd-of-models/[Llama 3] on the Meta AI blog.
+You can read more about https://ai.meta.com/blog/llama-4-multimodal-intelligence/[Llama 4] and https://ai.meta.com/research/publications/the-llama-3-herd-of-models/[Llama 3] on the Meta AI blog, as well as https://openai.com/index/introducing-gpt-oss/[GPT-OSS from OpenAI].
 This post on Reddit is also interesting: https://www.reddit.com/r/LocalLLaMA/comments/1iw1xn7/the_paradox_of_open_weights_but_closed_source/[The Paradox of Open Weights, but Closed Source]
 
 == Clients
@@ -218,13 +227,13 @@ Clients take various forms:
 * Desktop and Web clients, specific to the AI company developing a family of LLMs.
 These include https://chatgpt.com/[ChatGPT] and https://claude.ai/download[Claude].
 +
-image:/images/2025/09/claudeandchatgpt.png[]
+image:/images/2025/09/claudeandchatgpt.webp[]
 * Tools built around AI functionality (e.g. Cursor) or with it bolted on whether you want it or not (_i.e. every bloody application out there these days_ 😜).
 Some of these will give you access to a set of models, whilst others will mask the model itself and just call it +++<del>+++"magic"+++</del>+++"AI"
 +
-image:/images/2025/09/79ab812d942ed692f1dc202e96075596a5578951d89e2f9c76123284b38b01e7.png[,width=600px]
+image:/images/2025/09/79ab812d942ed692f1dc202e96075596a5578951d89e2f9c76123284b38b01e7.webp[,width=600px]
 +
-image:/images/2025/09/cursor00.png[,width=600px]
+image:/images/2025/09/cursor00.webp[,width=600px]
 * Model-agnostic interfaces, including:
 ** https://manual.raycast.com/ai[Raycast], which as part of its application gives the user the option to interact with dozens of different LLMs
 ** Simon Willison's https://llm.datasette.io/en/stable/[`llm` CLI]:
@@ -242,4 +251,46 @@ The World Wide Web (WWW) was invented in 1989 by Tim Berners-Lee.
 ** https://block.github.io/goose/[Goose], which is an _an extensible open source AI agent_.
 I've not used it a ton yet but at first glance it at least gives you a UI and CLI for interacting with LLMs and MCPs:
 +
-image:/images/2025/09/bb72744c933acfc7a85a9127f70f8161872462e7f95648fa66d47119718de9c0.png[]
+image:/images/2025/09/bb72744c933acfc7a85a9127f70f8161872462e7f95648fa66d47119718de9c0.webp[]
+
+== Where the model runs
+
+Running LLMs takes some grunt, which is why they're particularly well suited to being provided as a hosted services since someone else can absorb the cost of spinning up the hardware necessary to run them.
+
+There are 3 (ish) options for getting access to running a model (assuming you're using a client that has plugable models; if you're using something like ChatGPT then you just access the models through that alone and they run the models for you):
+
+* *My cloud*
+** My laptop, my on-premises servers with some big fat GPUs, etc
+* *Their cloud*
+** Servers run by the model publishers themselves; https://platform.openai.com/docs/overview[OpenAI], https://www.anthropic.com/api[Anthropic], etc.
+Usually they'll only offer access to their own models.
+* *Someone else's cloud*
+** Models hosted by 3rd party providers, including https://aws.amazon.com/bedrock/[Amazon Bedrock], https://ai.azure.com/[Azure AI Foundary], https://openrouter.ai/[OpenRouter], etc.
+The big providers like Azure and Amazon will usually have partnerships with some model companies and provide access to their models, whilst others may only offer access to publicly-available models (basically what you or I could run on our own locally, but with the necessary hardware behind it to perform well).
+
+I've found https://openrouter.ai/[OpenRouter] particularly useful as it gives you access to free models, and the ability to run the same prompt across different models:
+
+image:/images/2025/09/0371e711472c4996419299c514fe5027c8963e680292df55dc7aafb1815bb2be.webp[]
+
+It also has a good catalog of models and details of which provider offers them.
+
+Finally, OpenRouter is a pragmatic way to make use of the free models; `gpt-oss:120b` might sound nice and make claims about being as good as some of the closed-weights GPT models, but it's irrelevant if it won't run locally.
+
+== Routers
+
+The final piece of the puzzle, for now, is *routers*.
+
+Given that there are multiple models, and multiple places in which to run them, how do you decide which one to call?
+Different models are better at different tasks; or put another way, the big expensive models are usually good at everything but you may get a faster or cheaper (or perhaps even just more accureate) response from a specialised model.
+You could take the artisinal approach, and curate your model access based on your in-depth understanding of all models each time you want to call one.
+
+Alternatively, you use a router, which is a model itself and one that is specialised in understanding LLMs strengths, analysing the type of workload you want to run, and routing it to the most suitable one.
+
+Some routers include:
+
+* OpenRouter's https://openrouter.ai/openrouter/auto[AutoRouter]
+* https://github.com/SomeOddCodeGuy/WilmerAI[WilmerAI]
+* https://www.aurelio.ai/semantic-router[Semantic Router]
+
+TIP: You don't have to use a router, but you'll possibly see mention of them which is why I'm mentioning them here.
+Also, because I got confused by `OpenRouter` also being a service provider, not just a router :)
