--- a/content/post/ai-models.adoc
+++ b/content/post/ai-models.adoc
@@ -2,8 +2,8 @@
 draft: false
 title: 'Stumbling into AI: Part 2—Models'
 date: "2025-09-08T08:10:34Z"
-image: "/images/2025/09/"
-thumbnail: "/images/2025/09/"
+image: "/images/2025/09/h_IMG_2458.webp"
+thumbnail: "/images/2025/09/t_IMG_2446.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - AI
@@ -20,7 +20,7 @@ _A link:/categories/stumbling-into-ai[short series] of notes for myself as I lea
 _The driver for all this is understanding more about Apache Flink's https://github.com/apache/flink-agents[*Flink Agents*] project, and Confluent's https://www.confluent.io/product/streaming-agents/[**Streaming Agents**]._
 
 Having link:/2025/09/04/stumbling-into-ai-part-1mcp/[poked around MCP] and got a broad idea of what it is, I want to next look at Models.
-What used to be as simple as "I used AI" actually boils down into several discrete areas, particularly when one starts looking at using LLMs beyond writing link:/images/2025/09/13d0418e1ddd2f60eef260aa512cb2a27aed080a4702fd7f01e73ef7b8ba5c2b.webp[a rap about Apache Kafka in the style of Monty Python] and using it to build agents (like the Flink Agents that prompted this exploration in the first place).
+What used to be as simple as "_I used AI_" actually boils down into several discrete areas, particularly when one starts looking at using LLMs beyond writing link:/images/2025/09/13d0418e1ddd2f60eef260aa512cb2a27aed080a4702fd7f01e73ef7b8ba5c2b.webp[a rap about Apache Kafka in the style of Monty Python] and using it to build agents (like the Flink Agents that prompted this exploration in the first place).
 
 <!--more-->
 
@@ -29,7 +29,7 @@ image:/images/2025/09/models.excalidraw.webp[]
 == Models (Large Language ones, to be precise)
 
 This is the what it's all about right here.
-Large Language Models (LLMs) are what picqued the interest of nerds outside the academic community in 2023 and the broader public a year or so later.
+Large Language Models (LLMs) are what piqued the interest of nerds outside the academic community in 2023 and the broader public a year or so later.
 What used to be a "_OMFG have you seen this_" moment is now somewhat passé.
 Of _course_ I can ask my computer to write my homework assignment for me.
 Of _course_ I can use my phone to explain the nuances of the leg-before-wicket rule in Cricket.
@@ -40,7 +40,7 @@ Without a model, the whole AI sandcastle collapses.
 There are https://en.wikipedia.org/wiki/List_of_large_language_models[many dozens of LLMs].
 The most well-known ones are grouped into families and include https://platform.openai.com/docs/models[GPT], https://docs.anthropic.com/en/docs/about-claude/models/overview#model-names[Claude], and https://ai.google.dev/gemini-api/docs/models[Gemini].
 Within these there are different models, such as GPT-5, Claude 4.1, and so on.
-Often these models themselves have varients, specific to certain tasks like writing software code, generating images, or understanding audio.
+Often these models themselves have variants, specific to certain tasks like writing software code, generating images, or understanding audio.
 
 === Companies
 
@@ -104,7 +104,7 @@ Just like the video above explaining how LLMs work, if you want to know about de
 {{< youtube zduSFxRajkE >}}
 ====
 
-In some cases, the number of words is equivilent to the number of tokens:
+In some cases, the number of words is equivalent to the number of tokens:
 
 [source,bash]
 ----
@@ -130,7 +130,7 @@ image:/images/2025/09/441a2e716c8ec369ff81988cb0c369a67ffdfd10d292d87bd42d0c3bc6
 
 You'll notice that as well as the token count, there's a dollar amount next to it.
 Since I'm running the model locally (using https://ollama.com/[Ollama]) there's no direct cost for the invocation of it.
-Where the the token count matters is when you're using remote models, like GPT or Claude.
+Where the token count matters is when you're using remote models, like GPT or Claude.
 These are https://platform.openai.com/docs/pricing?latest-pricing=standard#text-tokens[charged] based on the number of tokens used, often listed as a cost per 1M tokens.
 
 Nine tokens might seem like a drop in the ocean of a million, but look at this:
@@ -186,7 +186,7 @@ Once the window is full you'll see the model start to "forget" things, or just r
 
 Some AI tools will expose the current context window size, like Goose:
 
-image:/2025/09/e40e0845d3e3e37bd2448014a136da8709c6ea48287465e4d65f24cb45d98b08.webp[]
+image:/images/2025/09/e40e0845d3e3e37bd2448014a136da8709c6ea48287465e4d65f24cb45d98b08.webp[]
 
 You can also sometimes 'compact' the context window, which will in effect summarise everything "discussed" so far with the LLM and start a new conversation.
 Since the summary will be shorter than the dialogue from which it was created, the context window will be smaller.
@@ -210,7 +210,7 @@ It can be used to specialise the model towards particular tasks or domains.
 
 Companies approach the sharing of models in different ways.
 Some keep absolutely everything to themselves, giving the end user simply an API endpoint or web page with which to interact with the model that they've built.
-Other will perhaps share the pre-trained model (but not the source data or code that went into training it), giving people the opportunity to then train it further with their own fine-tuning.
+Others will perhaps share the pre-trained model (but not the source data or code that went into training it), giving people the opportunity to then train it further with their own fine-tuning.
 This is the "Open Weight" approach.
 
 You can read more about https://ai.meta.com/blog/llama-4-multimodal-intelligence/[Llama 4] and https://ai.meta.com/research/publications/the-llama-3-herd-of-models/[Llama 3] on the Meta AI blog, as well as https://openai.com/index/introducing-gpt-oss/[GPT-OSS from OpenAI].
@@ -255,9 +255,9 @@ image:/images/2025/09/bb72744c933acfc7a85a9127f70f8161872462e7f95648fa66d4711971
 
 == Where the model runs
 
-Running LLMs takes some grunt, which is why they're particularly well suited to being provided as a hosted services since someone else can absorb the cost of spinning up the hardware necessary to run them.
+Running LLMs takes some grunt, which is why they're particularly well suited to being provided as hosted services since someone else can absorb the cost of provisioning the expensive hardware necessary to run them.
 
-There are 3 (ish) options for getting access to running a model (assuming you're using a client that has plugable models; if you're using something like ChatGPT then you just access the models through that alone and they run the models for you):
+There are 3 broad options for getting access to running a model (assuming you're using a client that has pluggable models; if you're using something like ChatGPT then you just access the models through that alone and they run the models for you):
 
 * *My cloud*
 ** My laptop, my on-premises servers with some big fat GPUs, etc
@@ -265,7 +265,7 @@ There are 3 (ish) options for getting access to running a model (assuming you're
 ** Servers run by the model publishers themselves; https://platform.openai.com/docs/overview[OpenAI], https://www.anthropic.com/api[Anthropic], etc.
 Usually they'll only offer access to their own models.
 * *Someone else's cloud*
-** Models hosted by 3rd party providers, including https://aws.amazon.com/bedrock/[Amazon Bedrock], https://ai.azure.com/[Azure AI Foundary], https://openrouter.ai/[OpenRouter], etc.
+** Models hosted by 3rd party providers, including https://aws.amazon.com/bedrock/[Amazon Bedrock], https://ai.azure.com/[Azure AI Foundry], https://openrouter.ai/[OpenRouter], etc.
 The big providers like Azure and Amazon will usually have partnerships with some model companies and provide access to their models, whilst others may only offer access to publicly-available models (basically what you or I could run on our own locally, but with the necessary hardware behind it to perform well).
 
 I've found https://openrouter.ai/[OpenRouter] particularly useful as it gives you access to free models, and the ability to run the same prompt across different models:
@@ -281,8 +281,8 @@ Finally, OpenRouter is a pragmatic way to make use of the free models; `gpt-oss:
 The final piece of the puzzle, for now, is *routers*.
 
 Given that there are multiple models, and multiple places in which to run them, how do you decide which one to call?
-Different models are better at different tasks; or put another way, the big expensive models are usually good at everything but you may get a faster or cheaper (or perhaps even just more accureate) response from a specialised model.
-You could take the artisinal approach, and curate your model access based on your in-depth understanding of all models each time you want to call one.
+Different models are better at different tasks; or put another way, the big expensive models are usually good at everything but you may get a faster or cheaper (or perhaps even just more accurate) response from a specialised model.
+You could take the artisanal approach, and curate your model access based on your in-depth understanding of all models each time you want to call one.
 
 Alternatively, you use a router, which is a model itself and one that is specialised in understanding LLMs strengths, analysing the type of workload you want to run, and routing it to the most suitable one.
 
