--- a/content/post/ai-mcp.adoc
+++ b/content/post/ai-mcp.adoc
@@ -179,9 +179,10 @@ image:/images/2025/09/2025-09-03T14-35-32-057Z.webp[]
 
 This means that an LLM can then (with the appropriate permissions) access files in GitHub, which is pretty handy.
 
-== Resources
+== More reading
 
 * https://modelcontextprotocol.io/[The MCP specification]
 * 🎥 https://www.youtube.com/watch?v=FLpS7OfD5-s[Model Context Protocol with Tim Berglund]
 * https://www.reddit.com/r/mcp/[r/mcp]: https://www.reddit.com/r/mcp/comments/1mj0fxs/i_spent_3_weeks_building_my_dream_mcp_setup_and/["I spent 3 weeks building my "dream MCP setup" and honestly, most of it was useless"]
 * https://www.confluent.io/blog/ai-agents-using-anthropic-mcp/[A good MCP explanation, plus examples using Confluent MCP server]
+* https://seanfalconer.medium.com/is-mcp-the-new-rest-or-the-next-betamax-a9151ba8ccb3[​​Is MCP the New REST or the Next Betamax? - Sean Falconer]
