add note re. Kafka Connect upsert/CDC

--- a/content/post/kafka-to-iceberg.adoc
+++ b/content/post/kafka-to-iceberg.adoc
@@ -373,6 +373,16 @@ This would more likely be used for data housekeeping (e.g. replacing the content
 
 **Kafka Connect** does not support either of these operations.
 
+[NOTE]
+====
+The current (v1.10) version of the Apache Iceberg connector for Kafka Connect does not support `UPSERT`.
+However, an earlier incarnation of the connector—authored by Tabular, before being donated to the Apache Iceberg project—_did_ support it including for CDC-sourced data.
+
+This means that you may see mention of the functionality, including configuration options such as `iceberg.tables.iceberg.tables.upsert-mode-enabled` and `iceberg.tables.cdc-field`.
+
+For more information and latest status, see https://github.com/apache/iceberg/pull/12070[the PR to add the functionality], https://github.com/apache/iceberg/issues/10842[the GitHub issue], and a https://lists.apache.org/thread/96dhf3sj5pc4ql0l8yk8sxgtr78bchrd[mailing list discussion].
+====
+
 **Tableflow** will support `UPSERT` soon.
 
 === Delivery Semantics
