--- a/content/post/ai-rag.adoc
+++ b/content/post/ai-rag.adoc
@@ -146,7 +146,7 @@ In practice we could be ingesting entire wikis or codebases of information.
 The vital bit is how we carve it up, which is known as _chunking_.
 A _chunk_ is what will get passed to the LLM for enriching the context, so it needs to be big enough to be useful, but not so big that it is unhelpful (e.g. blows the token limit on the LLM, provides context that is not specific enough, etc).
 
-Here I've manually pasted exerpts of the https://kafka.apache.org/blog[Apache Kafka 4.1.0 release blog post] (I've cropped the text in the code sample here, just for clarity of layout):
+Here I've manually pasted excerpts of the https://kafka.apache.org/blog[Apache Kafka 4.1.0 release blog post] (I've cropped the text in the code sample here, just for clarity of layout):
 
 [source,python]
 ----
@@ -269,7 +269,7 @@ results = collection.query(
 data = results['documents'][0][0]
 ----
 
-returns the document that is the mostly closely related, semantically:
+returns the document that is the most closely related, semantically:
 
 [source,]
 ----
@@ -301,7 +301,7 @@ There we go–our LLM used the context from the release notes to not only tell u
 == And then the snake ate its own tail
 
 In writing this article I made a rookie mistake.
-No suprise there; but one worth illustrating here.
+No surprise there; but one worth illustrating here.
 
 I use LLMs a lot to help my writing—never to _write_ but to help generate code, for example.
 The embeddings example on the https://ollama.com/blog/embedding-models[Ollama blog] had these documents:
